# paraview-mcp

./: .clang-format  .clang-tidy  .codecov.yml  .commitlintrc.yml  .editorconfig  .gitignore  .iwyu.imp  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.txt  glama.json  pyrefly.toml  release-please-config.json  server.json
.github/: INSTALL_PLUGIN.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/docker/: Dockerfile
.github/patches/: paraview-6.0.1-qt6-qflags.patch
.github/workflows/: ci.yml  codeql.yml  coverage.yml  docker.yml  release.yml
CMake/: ParaViewMCPDevTools.cmake
Documentation/Plans/: 2026-02-28-installation-docs-design.md  2026-02-28-installation-docs-implementation.md  2026-02-28-open-source-publication-design.md  2026-02-28-open-source-publication-implementation.md  2026-02-28-paraview-mcp-design.md  2026-02-28-paraview-mcp-implementation.md
Plugins/ParaViewMCP/: CMakeLists.txt  paraview.plugin  paraview_mcp_bridge.py
Plugins/ParaViewMCP/bridge/: IParaViewMCPPythonBridge.h  ParaViewMCPBridgeController.cxx  ParaViewMCPBridgeController.h  ParaViewMCPProtocol.h  ParaViewMCPPythonBridge.cxx  ParaViewMCPPythonBridge.h  ParaViewMCPRequestHandler.cxx  ParaViewMCPRequestHandler.h  ParaViewMCPServerConfig.h  ParaViewMCPSession.h  ParaViewMCPSocketBridge.cxx  ParaViewMCPSocketBridge.h
Plugins/ParaViewMCP/lifecycle/: ParaViewMCPAutoStart.cxx  ParaViewMCPAutoStart.h
Plugins/ParaViewMCP/resources/: ParaViewMCP.qrc
Plugins/ParaViewMCP/tests/: test_bridge_history.py
Plugins/ParaViewMCP/ui/: ParaViewMCPActionGroup.cxx  ParaViewMCPActionGroup.h  ParaViewMCPDockWindow.cxx  ParaViewMCPDockWindow.h  ParaViewMCPHistoryEntry.cxx  ParaViewMCPHistoryEntry.h  ParaViewMCPPopup.cxx  ParaViewMCPPopup.h  ParaViewMCPStateAppearance.h  ParaViewMCPToolbar.cxx  ParaViewMCPToolbar.h
Testing/CppSupport/: FakeParaViewMCPPythonBridge.h  TestSocketHelpers.h
Testing/Integration/: CMakeLists.txt
Testing/Integration/Cpp/: CMakeLists.txt  TestParaViewMCPLocalBridge.cxx
Testing/Unit/Cpp/: CMakeLists.txt  TestParaViewMCPProtocol.cxx  TestParaViewMCPRequestHandler.cxx  TestParaViewMCPServerConfig.cxx  TestParaViewMCPSocketBridge.cxx
Wrapping/Python/MCPServer/: README.md  main.py  pyproject.toml
Wrapping/Python/MCPServer/docs/plans/: 2026-03-01-test-coverage-design.md
Wrapping/Python/MCPServer/src/paraview_mcp/: __init__.py  protocol.py  server.py
Wrapping/Python/MCPServer/tests/: support.py  test_client_mapping.py  test_connection.py  test_connection_edges.py  test_mcp_integration.py  test_protocol.py  test_protocol_edges.py  test_server_runtime.py  test_tool_edges.py
docs/plans/: 2026-03-01-execution-history-and-snapshots-design.md  2026-03-01-execution-history-and-snapshots-plan.md  2026-03-01-toolbar-popup-ui-design.md  2026-03-01-toolbar-popup-ui-implementation.md
scripts/: notices-header.txt  update-notices.py
