[project]
name = "paraview-mcp"
version = "0.1.0"
description = "ParaView integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
paraview-mcp = "paraview_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
