[project]
name = "paraview-mcp-server"
version = "0.1.5" # x-release-please-version
description = "ParaView integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.26.0,<2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/failed33/paraview-mcp"
Repository = "https://github.com/failed33/paraview-mcp"
Issues = "https://github.com/failed33/paraview-mcp/issues"

[project.scripts]
paraview-mcp-server = "paraview_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.4,<0.16",
    "pyrefly>=0.54.0,<0.55",
    "pytest",
    "pytest-cov",
    "pip-licenses>=5.0",
    "licensecheck>=2025.1",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
